loki-stack-2.10.3/allow-grafana-egress-to-loki.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-grafana-egress-to-loki
  namespace: grafana
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  egress:
    - toEndpoints:
        - matchLabels:
            app: loki
            k8s:io.kubernetes.pod.namespace: loki
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
