loki-stack-2.10.3/allow-grafana-to-loki.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-grafana-to-loki
  namespace: loki
spec:
  endpointSelector:
    matchLabels:
      app: loki
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: grafana
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
